2003-2-2 Araki Ken <arakiken@users.sf.net>

	* Added -9/--crfg/cursor_fg_color,-0/--crbg/cursor_bg_color options.
	  These options specify foreground/background colors of the cursor.
	  If not specified, cursor fg color is default bg color, and vice versa.

2003-2-2 Seiichi SATO <ssato@sh.rim.or.jp>

	* Fixed a bug in alloc_closest_xcolor_pseudo(). (diff_r -> diff_b)
	  (Thanks to Hirokazu Minami san)

2003-2-2 Araki Ken <arakiken@users.sf.net>

	* Added EXT_KBD shortcut in ~/.mlterm/key.
	  This shortcut activate or deactivate arabic or iscii input method.

2003-2-2 Araki Ken <arakiken@users.sf.net>

	* Added --without-map-table,--without-prop-table options to configure.
	  These options remove character mapping table and character property table.

2003-2-1 Araki Ken <arakiken@users.sf.net>

	* Even if log buffer is full, static backscrolling works.
	  (Thanks to Murase Masaki san)
	* Renamed x_keymap to x_shortcut.

2003-1-27 Araki Ken <arakiken@users.sf.net>

	* Mouse position reporting is enabled, selecting region is forced to stop.

2003-1-26 Araki Ken <arakiken@users.sf.net>

	* Each user can start his/her own mlterm server.
	  (Thanks to Nakda Nobuyoshi san)

2003-1-26 MINAMI hirokazu <minami@chem.s.u-tokyo.ac.jp>

	* Fixed a bug in gdk-pixbuf module which prevents gamma correction
	  with pseudo-transparency (Thanks to TAKAHASHI Tamotsu san) 
	* Rewrited cache mechanism of background pictures for performance.
	
2003-1-26 Araki Ken <arakiken@users.sf.net>

	* Added -6/--stbs/static_backscroll_mode option, under which backscroll mode
	  isn't reset even if vt100 sequence is output from tty.
	* You can select region even while vt100 sequence is output from tty.

2003-1-13 Araki Ken <arakiken@users.sf.net>

	* config.h.in -> c_config.h.in

2003-1-13 Araki Ken <arakiken@users.sf.net>

	* ml_intl.h -> c_intl.h

2003-1-12 Araki Ken <arakiken@users.sf.net>

	* Multiple 'key=value' pairs separated by ';' can be specified
	  in "ESC ] 5379 ; .... BEL".