@@ -1,3 +1,9 @@
+2003-2-3 Araki Ken <arakiken@users.sf.net>
+
+	* Fixed a bug of cursor fg/bg colors.
+	* Fixed arguments of ml_iscii_new_lang().
+	  (Thanks to Sakamoto Hironori san)
+
 2003-2-2 Araki Ken <arakiken@users.sf.net>
 
 	* Added -9/--crfg/cursor_fg_color,-0/--crbg/cursor_bg_color options.
